--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -68,13 +68,14 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="MoveRight",Key=A,Scale=-0.350000)
 -AxisMappings=(AxisName="MoveRight",Key=D,Scale=0.350000)
 -AxisMappings=(AxisName="MoveForward",Key=W,Scale=0.350000)
--AxisMappings=(AxisName="MoveForward",Key=S,Scale=-0.250000)
+-AxisMappings=(AxisName="MoveForward",Key=S,Scale=-0.350000)
 -AxisMappings=(AxisName="Turn",Key=Right,Scale=0.500000)
 -AxisMappings=(AxisName="Turn",Key=Left,Scale=-0.500000)
 -AxisMappings=(AxisName="LookUp",Key=Down,Scale=-0.500000)
 -AxisMappings=(AxisName="LookUp",Key=Up,Scale=0.500000)
 -AxisMappings=(AxisName="TurnDebug",Key=MouseX,Scale=1.000000)
 -AxisMappings=(AxisName="LookUpDebug",Key=MouseY,Scale=-1.000000)
+-AxisMappings=(AxisName="MoveForward",Key=None,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-0.350000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=0.350000)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=0.350000)
@@ -85,6 +86,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="LookUp",Key=Up,Scale=0.500000)
 +AxisMappings=(AxisName="TurnDebug",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="LookUpDebug",Key=MouseY,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
