--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,6 +71,8 @@ AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/VRGameModeBase_BP.VRGameModeBase_BP_C
+GameDefaultMap=/Game/Levels/Debug.Debug
+EditorStartupMap=/Game/Levels/Debug.Debug
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -82,6 +84,7 @@ TriangleMeshTriangleMinAreaThreshold=5.000000
 bEnableAsyncScene=False
 bEnableShapeSharing=False
 bEnablePCM=False
+bEnableStabilization=False
 bWarnMissingLocks=True
 bEnable2DPhysics=False
 LockedAxis=Invalid
