--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Build/WindowsNoEditor/FileOpenOrder/CookerOpenOrder.log
 Config/DefaultEditor.ini
 Build/WindowsNoEditor/FileOpenOrder/CookerOpenOrder.log
 Config/DefaultEditor.ini
+Content/Levels/Game_Main_BuiltData.uasset
