--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Config/DefaultEditor.ini
 Build/WindowsNoEditor/FileOpenOrder/CookerOpenOrder.log
 Config/DefaultEditor.ini
 Content/Levels/Game_Main_BuiltData.uasset
+謎解き　メモ.txt
