--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -70,7 +70,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/Blueprints/VRGameModeBase_BP.VRGameModeBase_BP_C
+GlobalDefaultGameMode=/Game/Blueprints/VRGameMode_BP.VRGameMode_BP_C
 GameDefaultMap=/Game/Levels/Debug.Debug
 EditorStartupMap=/Game/Levels/Debug.Debug
 
@@ -112,5 +112,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
 
