--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -71,8 +71,9 @@ AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/VRGameMode_BP.VRGameMode_BP_C
-GameDefaultMap=/Game/Levels/Debug.Debug
+GameDefaultMap=/Game/Levels/Game_Main.Game_Main
 EditorStartupMap=/Game/Levels/Debug.Debug
+ServerDefaultMap=/Game/Levels/Game_Main.Game_Main
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
